--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-
 # C extensions
 *.so
-
 # Distribution / packaging
 bin/
 build/
@@ -19,32 +17,27 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
-
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
-
 # Unit test / coverage reports
 .tox/
 .coverage
 .cache
 nosetests.xml
 coverage.xml
-
 # Translations
 *.mo
-
 # Mr Developer
 .mr.developer.cfg
 .project
 .pydevproject
-
 # Rope
 .ropeproject
-
 # Django stuff:
 *.log
 *.pot
-
 # Sphinx documentation
 docs/_build/
+# Database
+db.sqlite.3
